--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "init-db": "ts-node -P ./init-db.tsconfig.json ./init-db.ts",
+    "build:prod": "./node_modules/.bin/ng build --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,7 +28,7 @@
     "@angular/router": "^10.0.2",
     "core-js": "^2.5.7",
     "firebase": "^6.1.0",
-    "firebaseui": "^4.4.0",
+    "firebaseui": "^4.6.1",
     "moment": "^2.24.0",
     "rxjs": "6.5.4",
     "tslib": "^2.0.0",
